Atttributes-in-XML

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".InitializedInCodeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InitializedInXmlActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
